--- a/.templates/linkpdf.en.html
+++ b/.templates/linkpdf.en.html
@@ -7,9 +7,11 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
+<div class="language-selector">
 <a class="image-reference" href="index_en.html" title="Page in English" >
   <img style="width:36px;height:23px;display:block;margin-left:auto;margin-right:auto"
          src="{{ pathto('_images/.en.gif', true)|e }}" alt="Page in English" /></a></br>
+</div>
 <h3>My résumé in PDF ?</h3>
 <ul class="this-page-menu">
  <li><a style="text-decoration: underline" href="cv.pdf" title="My PDF résumé!"
