--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -9,11 +9,11 @@
 #}
 <div class="will-not-be-sticky">
   <h3>Stay in touch!</h3>
-  <ul class="details">
-    <li><p style="font-size: 80%">Phone: <a href="tel:100101011101001100111101100001_2">+336 2841 2257</a></p></li>
-    <li><p style="font-size: 80%">Mail: <a href="mailto:besson[at]crans[.]org">besson[at]crans[.]org</a></p></li>
-  </ul>
   <ul class="social-icons">
     <li><a class="facebook" href="https://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a></li>
+  </ul>
+  <ul class="details">
+    <li><p style="font-size: 80%">Phone: <a href="tel:100101011101001100111101100001_2">+336 2841 2257</a></p></li>
+    <li><p style="font-size: 80%; color: blue"><a href="mailto:besson[at]crans[.]org">besson[at]crans[.]org</a></p></li>
   </ul>
 </div>
