--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -109,19 +109,18 @@
       border: 2px solid #F6F6F6;
       border-radius: 50% 50% 50% 50%;
       display: block;
-      height: 35px;
+      height: 35px; width: 35px;
       margin: 0;
       text-indent: -9000px;
       transition: all 0.2s ease 0s;
-      width: 35px;
       text-align: center;
   }
 </style>
 <script type="text/javascript" src="{{ pathto('_static/nbl.min.js', true)|e }}" data-nbl="[
   '{{ pathto('_static/forkit.js', true)|e }}',
-function(){ console.log('[nbl] Loading forkit, jQuery.noty, MouseTrap with NBL.js ...'); } ]">
+function(){ console.log('[nbl] Loading forkit with NBL.js ...'); } ]">
 </script>
-<!--
+<!-- , jQuery.noty, MouseTrap
   '{{ pathto('_static/noty/jquery.noty.js', true)|e }}',
   '{{ pathto('_static/noty/layouts/center.js', true)|e }}',
   '{{ pathto('_static/noty/layouts/bottomRight.js', true)|e }}',
@@ -197,7 +196,7 @@ function(){ console.log('[nbl] Loading forkit, jQuery.noty, MouseTrap with NBL.j
 {{ super() }}
 <div class="footer">
   <!-- JavaScript external sources -->
-  <script type="text/javascript">
+ <!-- <script type="text/javascript">
   nbl.l([
     '{{ pathto("_static/jquery.timeago.js", true)|e }}',
     '{{ pathto("_static/jquery.scrollUp.min.js", true)|e }}',
@@ -207,22 +206,24 @@ function(){ console.log('[nbl] Loading forkit, jQuery.noty, MouseTrap with NBL.j
     '{{ pathto("_static/jcaption.min.js", true)|e }}',
    function(){ if (typeof console !== 'undefined') { console.log('[nbl] Loading jQuery.smooth-scroll, jQuery.TimeAgo, jQuery.scrollUp, waypoints, waypoints-sticky, fokus with NBL.js ...'); } }
   ]);
-  </script>
+  </script> -->
 	<!-- Referrer.js (only for error pages). -->
 	 <!-- <script type="text/javascript" src="{{ pathto('_static/referrer.js', true)|e }}"></script> -->
 	<!-- Simple Image Trail (using _static/simpleimagetrail.gif) script (disable by default) -->
 	 <!-- <script type="text/javascript" src="{{ pathto('_static/simpleimagetrail.js', true)|e }}"></script> -->
 	<!-- Smooth Scroll plugin (source: https://github.com/kswedberg/jquery-smooth-scroll) -->
-	<script type="text/javascript" src="{{ pathto('_static/jquery.smooth-scroll.min.js', true)|e }}"></script>
+	 <script type="text/javascript" src="{{ pathto('_static/jquery.smooth-scroll.min.js', true)|e }}"></script>
 	<!-- jQuery TimeAgo plugin (source : http://timeago.yarp.com/) -->
-	 <!-- <script type="text/javascript" src="{{ pathto('_static/jquery.timeago.js', true)|e }}"></script> -->
+	 <script type="text/javascript" src="{{ pathto('_static/jquery.timeago.js', true)|e }}"></script>
 	<!-- jQuery Waypoints plugin (source : http://imakewebthings.com/jquery-waypoints/) -->
-	 <!-- <script type="text/javascript" src="{{ pathto('_static/waypoints.min.js', true)|e }}"></script> -->
-	 <!-- <script type="text/javascript" src="{{ pathto('_static/waypoints-sticky.js', true)|e }}"></script> -->
+	 <script type="text/javascript" src="{{ pathto('_static/waypoints.min.js', true)|e }}"></script>
+	 <script type="text/javascript" src="{{ pathto('_static/waypoints-sticky.js', true)|e }}"></script>
 	<!-- scrollUp jQuery plugin (source : http://markgoodyear.com/2013/01/scrollup-jquery-plugin/) -->
-	 <!-- <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}"></script> -->
+	 <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}"></script>
     <!-- Fokus -->
-	 <!-- <script type="text/javascript" src="{{ pathto('_static/fokus.min.js', true)|e }}"></script> -->
+	 <script type="text/javascript" src="{{ pathto('_static/fokus.min.js', true)|e }}"></script>
+    <!-- jcaption jQuery plugin (source: http://www.gethifi.com/blog/jcaption-a-jquery-plugin-for-simple-image-captions) -->
+   <script type="text/javascript" src="{{ pathto('_static/jcaption.min.js', true)|e }}"></script>
 
   <!-- JavaScript (one big is quicker than many small...) -->
 <script type="text/javascript">
@@ -233,12 +234,12 @@ if (typeof console !== 'undefined') { console.log("[INFO] Starting main JS conte
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   /* Here are set the default values for these variables,
    * corresponding to the default domain. */
-  var my_id = 'UA-38514290-1', my_domain = 'crans.org';
+  var my_id = 'UA-38514290-1',    my_domain = 'crans.org';
   /* Here a case-by-case analysis is done to change this variable
    * when the page is located on another web server. */
   switch(window.location.host) {
     case 'www.dptinfo.ens-cachan.fr':
-        my_id = 'UA-38514290-2'; my_domain = 'dptinfo.ens-cachan.fr';
+        my_id = 'UA-38514290-2';  my_domain = 'dptinfo.ens-cachan.fr';
         break;
     case 'lbesson.bitbucket.org':
         my_id = 'UA-38514290-14'; my_domain = 'bitbucket.org';
@@ -322,24 +323,24 @@ if (typeof console !== 'undefined') { console.log("[INFO] Starting main JS conte
 	Mousetrap.bind('mod+z', function() { alert("MouseTrap: react to 'mod+z'. (MouseTrap is still in testing...)."); });
 	Mousetrap.bind('g i', function() { alert("MouseTrap: react to 'g i'. (MouseTrap is still in testing...)"); }); */
 // jQuery.jCaption plugin
-   $('img').jcaption({
+/*   $('img').jcaption({
     wrapperElement: 'div',   // Element to wrap the image and caption in
     wrapperClass: 'caption', // Class for wrapper element
     captionElement: 'p',     // Caption Element
     imageAttr: 'alt',        // Attribute of image to use as caption source
     requireText: true,       // If true, it checks to make sure there is caption copy before running on each image
-    copyStyle: false,        // Should inline style be copied from img element to wrapper
-    removeStyle: true,       // Strip inline style from image
-    removeAlign: true,       // Strip align attribute from image
-    copyAlignmentToClass: false, // Assign the value of the image's align attribute as a class to the wrapper
-    copyFloatToClass: true,      // Assign the value of the image's float value as a class to the wrapper
+    copyStyle: true,         // Should inline style be copied from img element to wrapper
+    removeStyle: false,      // Strip inline style from image
+    removeAlign: false,      // Strip align attribute from image
+    copyAlignmentToClass: true, // Assign the value of the image's align attribute as a class to the wrapper
+    copyFloatToClass: true,     // Assign the value of the image's float value as a class to the wrapper
     autoWidth: true,         // Assign a width to the wrapper that matches the image
-    animate: false,          // Animate on hover over the image
+    animate: true,           // Animate on hover over the image
     show: {opacity: 'show'}, // Show Animation
     showDuration: 200,       // Hide Animation
     hide: {opacity: 'hide'},
     hideDuration: 200 
-  });
+  }); */
  // Restore the first title.
    window.document.title=title_backup;
 // Put here all JS code, and its dependencies before.
@@ -356,7 +357,7 @@ if (typeof console !== 'undefined') { console.log("[INFO] Starting main JS conte
  + "</br>Taille d'écran <span style=\"color: white\">"
   + screen.availWidth + "x"
   + screen.availHeight + "</span>.  ");
-  writeLocationOfThePage("", "", "color: grey; font-size: 80%", "color: grey");
+  writeLocationOfThePage("", "", "color: grey; font-size: 90%", "color: grey");
 </script>
 <!-- Display a custom message if local or on the Crans Network -->
 Votre adresse IP est <script type="text/javascript">window.document.write(myip)</script><noscript>inconnue</noscript>.
@@ -440,20 +441,19 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       - Apache is used on almost every other server I used,
       - nginx is used on my personnal machine (as a test, august 2013 - sept. 2013). -->
 <script type="text/javascript">
- if (window.location.host.substring(0,6) == 'jarvis')
- {
- window.document.write("<li><a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.1 on " + window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>") 
+ if (window.location.host.substring(0,6) == 'jarvis') {
+ window.document.write("<li><a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.1 on "
+  + window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>"); 
  }
- else
- {
- window.document.write("<li><a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on " + window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>") 
- }
+ else {
+ window.document.write("<li><a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on "
+  + window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>"); 
+ };
 </script>
 <noscript>
 <li><a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.4" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 </noscript>
   <script type="text/javascript">
-   var namePage=window.location.protocol + "//" + window.location.host + window.location.port + window.location.pathname; 
    noty({
     text: 'Cette page vous paraît-elle bien écrite ?', timeout: false, layout: "bottomRight",
     buttons: [ // this = button element, $noty = $noty element
@@ -465,13 +465,12 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       }, 
       {addClass: 'btn btn-danger', text: 'Non !!', onClick: function($noty) {
           $noty.close();
-          noty({text: "Oups ! Peut-être pouvez vous prendre quelques instants pour signaler un bug ? " +
+          noty({text: "<span style=\"font-weight:bold\">Oups !</span> Peut-être pouvez vous prendre quelques instants pour signaler un bug ? " +
            "\n</br>Via <a title=\"bitbucket.org\" href=\"https://bitbucket.org/lbesson/web-sphinx/issues/new\">bitbucket.org/lbesson/web-sphinx/issues/new</a>, <span style=\"color: blue\">c'est facile !</span>", 
            type: 'warning', timeout: false, onClick: function($noty){
            	 $noty.close();
            	 console.log("[INFO] Opening a new window with https://bitbucket.org/lbesson/web-sphinx/issues/new.");
              window.open("https://bitbucket.org/lbesson/web-sphinx/issues/new");
-             // window.location.href("https://bitbucket.org/lbesson/web-sphinx/issues/new");
              return false;
           } });
         }
